--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,52 @@
+alembic==1.5.4
 appdirs==1.4.3
 CacheControl==0.12.6
 certifi==2019.11.28
+cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 contextlib2==0.6.0
+cryptography==3.2.1
 distlib==0.3.0
 distro==1.4.0
+flake8==3.8.4
 Flask==1.1.2
+Flask-Migrate==2.6.0
+Flask-Minify==0.29
 Flask-SQLAlchemy==2.4.4
 html5lib==1.0.1
+htmlmin==0.1.12
 idna==2.8
 ipaddr==2.2.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jsmin==2.2.2
+lesscpy==0.14.0
 lockfile==0.12.2
+Mako==1.1.4
 MarkupSafe==1.1.1
+mccabe==0.6.1
 msgpack==0.6.2
 packaging==20.3
 pep517==0.8.2
+ply==3.11
 progress==1.5
+pycodestyle==2.6.0
+pycparser==2.20
+pyflakes==2.2.0
+PyJWT==2.0.1
 pyparsing==2.4.6
+python-dateutil==2.8.1
+python-editor==1.0.4
 pytoml==0.1.21
+PyYAML==5.3.1
 requests==2.22.0
 retrying==1.3.3
 six==1.14.0
 SQLAlchemy==1.3.22
+transliterate==1.10.2
 urllib3==1.25.8
 webencodings==0.5.1
 Werkzeug==1.0.1
+xxhash==2.0.0
